2009-01-05  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug Fixed bug #9506: label uid shows not working  
	* Fixed bug #10056: Misspelling english word "guesbooks" 

2009-01-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10047: typo3/contrib is not prefixed with config.absRefPrefix

2009-01-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8361: Stage change notification emails not send when publishing from Live workspace (Thanks to Andreas Wolf)

2008-12-30  Francois Suter <francois@typo3.org>

	* Fixed bug #10035: Function index not up to date in class t3lib_div

2008-12-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8746: Date/time field problem with timezone shifting when using the "+NN", "d" or "d+NN" shortcuts
	* Fixed bug #10033: Date/time field shortcut "d" doesn't work on already filled date fields since 4.2.0
	* Fixed issue that on a datetime field entering just a "date" wasn't possible: It is now, and time will be set to "0:00"

2008-12-29  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #9773: Fallback for skinImg having forceFileExtension
	* Fixed bug #8205: Shortcut ends in parse_url-error
	* Fixed bug #10022: Pagecontent/Hidden has no effect 

2008-12-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10012: TYPO3 generates incorrect ETag

2008-12-24  Francois Suter <francois@typo3.org>

	* Fixed bug #9948: Label rm.clearCache_pages was abusively removed from core lang file

2008-12-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9999: Setting [BE][compressionLevel]=true causes problems

2008-12-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9810: ClearCacheMenu doesn't work when click on icon

2008-12-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9977: Extensions class.ext_update.php scripts are executed even when extension isn't loaded

2008-12-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8952: Flags are missing
	* Fixed bug #8525: added Korean flag
